5.57

* failed diagnostic plots give an error message rather than breaking PLOTR.

5.56

* as.define.spec, as.pdf.define, tabular.define give a convenient aesthetic for displaying spec objects.
* read.spec strips leading & trailing quotes and spaces by default.
* significance defaults to 20 digits for range estimation in specification.
* respecify updates spec ranges.
* toSAS methods are included for writing date/time objects to XPT files.
* tabular and as.document support rowgroup and columngroup labels.
* tabular and ltable support alternate fontsizes for source and file attributions.
* new tabular and ltable methods are added for table and matrix.
* electronicAppendix supports export of prior revisions and has default `as'.
* omegacov and sigmacov are new variants of omegacor and sigmacor.
* shuffle forces column names to be unique.
* NONR gives a warning if user tries to wait for more than 99 runs.
* in rlog, cov is -1 instead of zero if covariance not requested.
* fork namespace is required where necessary.
* Ops.keyed reverts to native dispatch mechanism.
* diagnostic plots recognize NM73 RES/PRED reserved terms.
* functions rig, moot, etc. are removed.
* bugfix for xpath2frame.
* bugfix for is.diagonal.
* bugfix for format.comment.
* bugfix for range checking in matches.

5.55

* [.keyed is more robust when assigning 'defined' for various vector types.
* cwresPlots looks for CIRES, CIWRES, CIWRESI in addition to the usual variants.
* diagnosticPlots is now aware of CIRES, CIWRES, CIWRESI, PREDI, CIPRED.
* map gains an argument: strict.
* metaMerge methods have bug fixes and additions.
* NONR72 is eliminated and NONR inherits its defaults.
* PLOTR conditionally backtransforms PREDI and CIPRED.
* specification.data.frame has a bug fix.
* superset supports wider range of NONMEM syntax.
* wiki2latex and wiki2plotmath allow their defaults to be overridden.

5.54

* rlog fixes a bug where failed covariance step was reported as 0 instead of 1.