@@ -2,7 +2,7 @@ exportPattern("^[^\\.]")
 importFrom(stats,aggregate)
 importFrom(reshape,cast)
 importFrom(reshape,melt)
-importFrom(reshape,guess_value)
+#importFrom(reshape,guess_value)
 import(lattice)
 import(XML)
 import(MASS)
